# TypoCode-rs

./: .gitignore  README.md
.github/workflows/: ci.yml
typocode/: Cargo.toml  README.md
typocode/src/: app.rs  cli.rs  errors.rs  file.rs  lib.rs  logging.rs  main.rs  stats.rs  timer.rs  update.rs  view.rs
typocode/src/snapshots/: typocode__view__tests__bat_frame_default.snap  typocode__view__tests__bat_frame_with_wrong_keystroke_overlay.snap  typocode__view__tests__small_viewport_falls_back_to_plain.snap
typocode/src/text/: mod.rs  pagination.rs  wrap.rs
typocode/src/widgets/: body.rs  chrome.rs  footer.rs  gutter.rs  header.rs  mod.rs  summary.rs
